force-app/main/default/objects/CommodityPrice__c/CommodityPrice__c.object-meta.xml
<CustomObject>
    <label>Preço Commodities</label>
    <nameField>
        <label>Preço Commodity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preços Commodities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>