force-app/main/default/objects/CommodityPrice__c/fields/CreatedByUser__c.field-meta.xml
<CustomField>
    <fullName>CreatedByUser__c</fullName>
    <label>Criado Por</label>
    <length>12</length>
    <type>Text</type>
</CustomField>