force-app/main/default/objects/CommodityPrice__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Moeda de cotação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
                <label>Dólar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>