force-app/main/default/objects/CommodityPrice__c/fields/MarketIdentifierCode__c.field-meta.xml
<CustomField>
    <fullName>MarketIdentifierCode__c</fullName>
    <label>Código de Identificação do Mercado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XCBOT</fullName>
                <label>Bolsa Chicago</label>
            </value>
            <value>
                <fullName>PROV</fullName>
                <label>Balcão Provisório</label>
            </value>
            <value>
                <fullName>Praça</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>