force-app/main/default/objects/CommodityPrice__c/fields/MaturityKeyDate__c.field-meta.xml
<CustomField>
    <fullName>MaturityKeyDate__c</fullName>
    <label>Data Fixada de Vencimento</label>
    <type>Date</type>
</CustomField>