force-app/main/default/objects/CommodityPrice__c/fields/PriceQuotationCurrency__c.field-meta.xml
<CustomField>
    <fullName>PriceQuotationCurrency__c</fullName>
    <label>Preço da cotação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>