force-app/main/default/objects/CommodityPrice__c/fields/PriceQuotationTime__c.field-meta.xml
<CustomField>
    <fullName>PriceQuotationTime__c</fullName>
    <label>Hora da Cotação</label>
    <type>Time</type>
</CustomField>