force-app/main/default/objects/CommodityPrice__c/fields/PriceQuotationType__c.field-meta.xml
<CustomField>
    <fullName>PriceQuotationType__c</fullName>
    <label>Tipo de Cotação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>09</fullName>
                <label>Bolsa</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Balcão</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>