force-app/main/default/objects/CommodityPrice__c/fields/QuotationDate__c.field-meta.xml
<CustomField>
    <fullName>QuotationDate__c</fullName>
    <label>Data da cotação</label>
    <type>Date</type>
</CustomField>