force-app/main/default/objects/CommodityPrice__c/fields/TimeToMaturity__c.field-meta.xml
<CustomField>
    <fullName>TimeToMaturity__c</fullName>
    <label>Vencimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JAN</fullName>
                <label>Janeiro</label>
            </value>
            <value>
                <fullName>FEB</fullName>
                <label>Fevereiro</label>
            </value>
            <value>
                <fullName>MAR</fullName>
                <label>Março</label>
            </value>
            <value>
                <fullName>APR</fullName>
                <label>Abril</label>
            </value>
            <value>
                <fullName>MAY</fullName>
                <label>Maio</label>
            </value>
            <value>
                <fullName>JUN</fullName>
                <label>Junho</label>
            </value>
            <value>
                <fullName>JUL</fullName>
                <label>Julho</label>
            </value>
            <value>
                <fullName>AUG</fullName>
                <label>Agosto</label>
            </value>
            <value>
                <fullName>SEP</fullName>
                <label>Setembro</label>
            </value>
            <value>
                <fullName>OCT</fullName>
                <label>Outubro</label>
            </value>
            <value>
                <fullName>NOV</fullName>
                <label>Novembro</label>
            </value>
            <value>
                <fullName>DEC</fullName>
                <label>Dezembro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>