force-app/main/default/objects/CommodityPrice__c/fields/UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasure__c</fullName>
    <label>Unidade de medida de cotação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BU</fullName>
                <label>Bushel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>