force-app/main/default/objects/CommodityPrice__c/fields/ValidityStart_DateTime__c.field-meta.xml
<CustomField>
    <fullName>ValidityStart_DateTime__c</fullName>
    <label>Válido desde</label>
    <type>DateTime</type>
</CustomField>