force-app/main/default/objects/CommodityPrice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Commodity__c</columns>
    <columns>MarketIdentifierCode__c</columns>
    <columns>PriceQuotationType__c</columns>
    <columns>TimeToMaturity__c</columns>
    <columns>UnitOfMeasure__c</columns>
    <columns>Currency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>